Fixed the overflow problem
Fixed the problem where the HTML page was appearing larger than it
really was.

--- a/Animat.Studio/Resources/StartPage/index.css
+++ b/Animat.Studio/Resources/StartPage/index.css
@@ -7,7 +7,9 @@ body, html {
     margin: 0px;
 }
 
-body { min-width: 1000px; }
+body { min-width: 1000px;
+    margin-top: -20;
+}
  
 h1, h2, h3 {
     margin: 20px 0 0px;
@@ -18,27 +20,22 @@ h1 { font-size: 28px; }
 h2 { font-size: 20px; }
 h3 { font-size: 16px; }
 
-logo {
-    height: 77;
-    width: 240;
-}
 /* Layout Wrappers
  * ----------------------------------------------------------*/
 .wrapper, .middle, .container {
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 }
 .middle {
-	position: relative;
+	position: relative;    
 }
 .middle:after {
     display: table;
     clear: both;
     content: '';
 }
-.container {
-	float: left;
-	overflow: hidden;    
+.container {    
+	float: left; 
 }
 .header {
     width: 100%;    
@@ -49,20 +46,20 @@ logo {
  * --------------------------------------------------------------------------*/
 .header .logo-wrapper {
     position: relative;
-    top: -100px;
     width: 240px;
     height: 77px;
     z-index: 2;
     
-    margin: 17px 30px 6px 30px;
+    padding-top: 17px;
+    margin: 0px 30px 6px 30px;
 }
 
-.header .sidebar-column {
-    width: 260px;
-    height: 101px;
-    
-    margin-left: 20px;
+.header .logo-wrapper .logo {
+    position: relative;
+    width: 240px;
+    height: 77px;
 }
+
 
 /* Content Panel
 -----------------------------------------------------------------------------*/
@@ -71,7 +68,6 @@ logo {
     height: 100%;
 	margin-left: 300px;
     margin-top: -9px;
-    overflow-y: hidden;
 }
 
 /* Project Action Bar
@@ -82,6 +78,13 @@ logo {
     height: 100%;
 	margin-left: -100%;
 	position: relative;
+}
+
+.left-sidebar-background {
+    position: absolute;
+    left: 20px;
+    height: 100%;
+    width: 260px;
 }
 
 .left-sidebar .quick-start-bar {
